--- a/src/Vista/formMenuAdmin.form
+++ b/src/Vista/formMenuAdmin.form
@@ -103,6 +103,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Menu de Administrador"/>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="ed" green="e7" red="dc" type="rgb"/>
     </Property>
