--- a/src/Vista/frmCajero.form
+++ b/src/Vista/frmCajero.form
@@ -531,15 +531,15 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="lblUsuario" min="-2" pref="70" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="lblNombre" max="32767" attributes="0"/>
+                  <Component id="lblNombre" pref="142" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="lblSucursal" min="-2" pref="170" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="lblVersionOS" min="-2" pref="129" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="lblVersionJava" min="-2" pref="121" max="-2" attributes="0"/>
+                  <Component id="lblVersionJava" min="-2" pref="102" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="lblFecha" min="-2" pref="120" max="-2" attributes="0"/>
+                  <Component id="lblFecha" min="-2" pref="139" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
