--- a/src/Vista/frmReportesOpPSucursales.form
+++ b/src/Vista/frmReportesOpPSucursales.form
@@ -244,7 +244,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Iconos/icon-actualizar.png"/>
+              <Image iconType="3" name="/Iconos/mostrar_todoss.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Mostrar Todo"/>
           </Properties>
@@ -261,7 +261,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Iconos/icon-lupa.png"/>
+              <Image iconType="3" name="/Iconos/filtro_x_usuarios.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Filtrar por Mes y A&#xf1;o"/>
             <Property name="autoscrolls" type="boolean" value="true"/>
