--- a/src/Vista/frmVentaBoletosXUsuarioPartGerente.form
+++ b/src/Vista/frmVentaBoletosXUsuarioPartGerente.form
@@ -242,7 +242,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Iconos/icon-lupa.png"/>
+              <Image iconType="3" name="/Iconos/filtro_x_usuarios.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Filtrar por usuario"/>
           </Properties>
@@ -259,7 +259,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Iconos/ticket_iconos.png"/>
+              <Image iconType="3" name="/Iconos/mostrar_todoss.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Mostrar Todo"/>
           </Properties>
