--- a/src/Vista/formMenuAdmin.form
+++ b/src/Vista/formMenuAdmin.form
@@ -95,6 +95,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Info..."/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiInfoActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
