--- a/src/FormulariosAyuda/Sistemas/AyudaVentasXSocios.form
+++ b/src/FormulariosAyuda/Sistemas/AyudaVentasXSocios.form
@@ -36,6 +36,9 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="type" type="java.awt.Window$Type" editor="org.netbeans.modules.form.editors.EnumEditor">
+      <Value id="UTILITY"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
