--- a/src/Vista/frmReporteVentaPSucursal.form
+++ b/src/Vista/frmReporteVentaPSucursal.form
@@ -85,6 +85,9 @@
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[1220, 550]"/>
     </Property>
+    <Property name="type" type="java.awt.Window$Type" editor="org.netbeans.modules.form.editors.EnumEditor">
+      <Value id="UTILITY"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
@@ -229,21 +232,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
               <Image iconType="3" name="/Iconos/icon-lupa.png"/>
-=======
-              <Image iconType="3" name="/Iconos/icon-pendiente.png"/>
->>>>>>> fa002db5ebd91ebebe11874ceccde32f01c82b9d
-=======
-
-              <Image iconType="3" name="/Iconos/icon-lupa.png"/>
-
->>>>>>> b90137778a55b7b9f156152de1cd5143712dcdac
-=======
-              <Image iconType="3" name="/Iconos/icon-lupa.png"/>
->>>>>>> f788c9cd351ad89013509e8bcf1bdd6a08f90d51
             </Property>
             <Property name="text" type="java.lang.String" value="Filtrar por Mes y A&#xf1;o"/>
           </Properties>
@@ -260,21 +249,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
               <Image iconType="3" name="/Iconos/icon-actualizar.png"/>
-=======
-              <Image iconType="3" name="/Iconos/mostrar_todoss.png"/>
->>>>>>> fa002db5ebd91ebebe11874ceccde32f01c82b9d
-=======
-
-              <Image iconType="3" name="/Iconos/icon-actualizar.png"/>
-
->>>>>>> b90137778a55b7b9f156152de1cd5143712dcdac
-=======
-              <Image iconType="3" name="/Iconos/icon-actualizar.png"/>
->>>>>>> f788c9cd351ad89013509e8bcf1bdd6a08f90d51
             </Property>
             <Property name="text" type="java.lang.String" value="Mostrar todos los boletos"/>
           </Properties>
